--- a/index.html
+++ b/index.html
@@ -1,26 +1,28 @@
 <!DOCTYPE HTML>
 <html>
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
-    <title>Jasmine Spec Runner</title>
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+  <title>Jasmine Spec Runner</title>
 
-    <link rel="stylesheet" type="text/css" href="bower_components/jasmine/lib/jasmine-core/jasmine.css">
-    <!--<script type="text/javascript" src="bower_components/jasmine/lib/jasmine-core.js"></script>-->
-    <script type="text/javascript" src="bower_components/jasmine-core/lib/jasmine-core/jasmine.js"></script>
-    <script type="text/javascript" src="bower_components/jasmine-core/lib/jasmine-core/jasmine-html.js"></script>
-    <script type="text/javascript" src="bower_components/jasmine-core/lib/jasmine-core/boot.js"></script>
-    <script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
-    <script type="text/javascript" src="bower_components/jasmine-jquery/lib/jasmine-jquery.js"></script>
+  <link rel="stylesheet" type="text/css" href="bower_components/jasmine/lib/jasmine-core/jasmine.css">
+  <!--<script type="text/javascript" src="bower_components/jasmine/lib/jasmine-core.js"></script>-->
+  <script type="text/javascript" src="bower_components/jasmine-core/lib/jasmine-core/jasmine.js"></script>
+  <script type="text/javascript" src="bower_components/jasmine-core/lib/jasmine-core/jasmine-html.js"></script>
+  <script type="text/javascript" src="bower_components/jasmine-core/lib/jasmine-core/boot.js"></script>
+  <script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
+  <script type="text/javascript" src="bower_components/jasmine-jquery/lib/jasmine-jquery.js"></script>
+  <script type="text/javascript" src="bower_components/virtual-dom/dist/virtual-dom.js"></script>
+  <script type="text/javascript" src="vendor/html2hscript.js"></script>
 
-    <script type="text/javascript">
-        (function () {
-            describe("A suite", function () {
-                it("contains spec with an expectation", function () {
-                    expect(true).toBe(true);
-                });
-            });
-        })();
-    </script>
+  <script type="text/javascript">
+    (function () {
+      describe("A suite", function () {
+        it("contains spec with an expectation", function () {
+          expect(true).toBe(true);
+        });
+      });
+    })();
+  </script>
 </head>
 <body>
 </body>
