--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
   <script type="text/javascript" src="bower_components/jasmine-jquery/lib/jasmine-jquery.js"></script>
   <script type="text/javascript" src="bower_components/virtual-dom/dist/virtual-dom.js"></script>
   <script type="text/javascript" src="vendor/html2hscript.js"></script> <!-- include spec files here... -->
-  <script type="text/javascript" src="test/first-test-spec.js"></script>
+  <script type="text/javascript" src="vendor/is-object.js"></script> <!-- include spec files here... -->
+  <script type="text/javascript" src="test/spec-helper.js"></script>
+  <script type="text/javascript" src="test/spec/first-test-spec.js"></script>
 </head>
 <body>
 </body>
