--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
   <script type="text/javascript" src="dist/luffa.js"></script> <!-- include spec files here... -->
   <script type="text/javascript" src="test/spec-helper.js"></script>
   <script type="text/javascript" src="test/spec/first-test-spec.js"></script>
+  <script type="text/javascript" src="test/spec/patches-spec.js"></script>
 </head>
 <body>
 </body>
