--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <script type="text/javascript" src="test/spec-helper.js"></script>
   <script type="text/javascript" src="test/spec/first-test-spec.js"></script>
   <script type="text/javascript" src="test/spec/patches-spec.js"></script>
+  <script type="text/javascript" src="test/spec/highlight-spec.js"></script>
 </head>
 <body>
 </body>
