--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   <script type="text/javascript" src="test/spec/first-test-spec.js"></script>
   <script type="text/javascript" src="test/spec/patches-spec.js"></script>
   <script type="text/javascript" src="test/spec/highlight-spec.js"></script>
+  <script type="text/javascript" src="test/spec/generator-spec.js"></script>
 </head>
 <body>
 </body>
