--- a/index.html
+++ b/index.html
@@ -5,15 +5,16 @@
   <title>Jasmine Spec Runner</title>
 
   <link rel="stylesheet" type="text/css" href="bower_components/jasmine/lib/jasmine-core/jasmine.css">
-  <!--<script type="text/javascript" src="bower_components/jasmine/lib/jasmine-core.js"></script>-->
   <script type="text/javascript" src="bower_components/jasmine-core/lib/jasmine-core/jasmine.js"></script>
   <script type="text/javascript" src="bower_components/jasmine-core/lib/jasmine-core/jasmine-html.js"></script>
   <script type="text/javascript" src="bower_components/jasmine-core/lib/jasmine-core/boot.js"></script>
   <script type="text/javascript" src="bower_components/jquery/dist/jquery.min.js"></script>
   <script type="text/javascript" src="bower_components/jasmine-jquery/lib/jasmine-jquery.js"></script>
   <script type="text/javascript" src="bower_components/virtual-dom/dist/virtual-dom.js"></script>
-  <script type="text/javascript" src="vendor/html2hscript.js"></script> <!-- include spec files here... -->
-  <script type="text/javascript" src="dist/luffa.js"></script> <!-- include spec files here... -->
+  <script type="text/javascript" src="vendor/html2hscript.js"></script>
+  <script type="text/javascript" src="dist/luffa.js"></script>
+
+  <!-- include spec files here... -->
   <script type="text/javascript" src="test/spec-helper.js"></script>
   <script type="text/javascript" src="test/spec/first-test-spec.js"></script>
   <script type="text/javascript" src="test/spec/patches-spec.js"></script>
