--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   <script type="text/javascript" src="test/spec/patches-spec.js"></script>
   <script type="text/javascript" src="test/spec/highlight-spec.js"></script>
   <script type="text/javascript" src="test/spec/generator-spec.js"></script>
+  <script type="text/javascript" src="test/spec/apply-patches-spec.js"></script>
 </head>
 <body>
 </body>
